<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.detail.DetailFilmActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <ScrollView
        android:id="@+id/sv_detail_film"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_poster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@color/placeholder"
                android:contentDescription="@string/iv_poster"/>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_poster"
                android:paddingHorizontal="8dp"
                android:paddingTop="4dp"
                android:textSize="28sp"
                android:textStyle="bold"
                tools:text="@string/title" />

            <TextView
                android:id="@+id/text_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_title"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/genre" />

            <TextView
                android:id="@+id/tv_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_title"
                android:maxLines="2"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/text_production"/>

            <TextView
                android:id="@+id/text_overview"
                android:layout_marginStart="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_genre"
                android:layout_marginTop="8dp"
                android:text="@string/overview" />

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:ellipsize="end"
                android:layout_below="@id/tv_genre"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_toEndOf="@id/text_production"/>

            <TextView
                android:id="@+id/text_production"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_overview"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/production_companion" />

            <TextView
                android:id="@+id/tv_production"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:ellipsize="end"
                android:layout_marginEnd="8dp"
                android:layout_below="@id/tv_overview"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/text_production" />

            <TextView
                android:id="@+id/text_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_production"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/duration" />

            <TextView
                android:id="@+id/tv_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_production"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/text_production"/>

            <TextView
                android:id="@+id/text_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_duration"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/rating" />

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_duration"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/text_production"/>
        </RelativeLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="visible"/>

</RelativeLayout>